# linak-controller

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RECIPES.md  config-example.yaml  config.yaml  discover.py  docker-compose.yml  docker_entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup.py  windowstest.py  windowstest.py.bak
idasen_controller/: config.py  desk.py  gatt.py  main.py  util.py
idasen_controller/example/: config.yaml
linak_controller/: config.py  desk.py  gatt.py  main.py  restapi.py  util.py
linak_controller/example/: config.yaml
recipes/: RECIPES.md
recipes/docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  docker_entrypoint.sh
ref/: scratch
reference/: advertised-services.md  desk-internals.md  openapi.yaml
scripts/: build  publish
