[tool.poetry]
name = "linak-controller"
version = "1.1.0" 
description = "Command line tool for controlling the Linak standing desks"
authors = ["Rhys Tyers"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
aiohttp = "^3.8.4"
appdirs = "^1.4.4"
bleak = "^0.21.1"
PyYAML = "^6.0"

[tool.poetry.scripts]
linak-controller = 'linak_controller.main:init'
idasen-controller = 'linak_controller.main:init'

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"