[project]
name = "linak-controller"
version = "1.3.2"
description = "Command line tool for controlling the Linak standing desks"
authors = [{ name = "Rhys Tyers" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "aiohttp>=3.8.4,<4",
    "appdirs>=1.4.4,<2",
    "bleak>=1.1.1,<2",
    "PyYAML~=6.0",
]

[project.scripts]
linak-controller = "linak_controller.main:init"
idasen-controller = "linak_controller.main:init"

[dependency-groups]
dev = ["black>=23.10.1,<24"]

[tool.uv.workspace]
members = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
